# lm-evaluation-harness

./: .pre-commit-config.yaml  AGENTS.md  README.md  core.py  liteeval.py  liteval.py  lm_eval_mini.py  logging_config.py  nano_eval.py  pyproject.toml  result_types.py  tinyeval.py  wip.md
docs/: config_files.md  interface.md
lm_eval/: __init__.py  evaluator.py
lm_eval/_cli/: run.py  utils.py
lm_eval/api/: model.py  registry.py  task.py  utils.py
lm_eval/config/: evaluate_config.py
lm_eval/models/: __init__.py  api_models.py  openai_completions.py  utils.py
rust-tinyeval/: Cargo.toml
rust-tinyeval/src/: core.rs  error.rs  lib.rs  main.rs
rust-tinyeval/src/tasks/: chartqa.rs  gsm8k.rs  mod.rs
rust-tinyeval/tests/: e2e_tests.rs
tasks/: __init__.py  chartqa.py  gsm8k.py  gsm8k_llama.py
tests/: test_all_tasks.py  test_chartqa.py  test_chartqa_integration.py  test_cli_http.py  test_cli_subcommands.py  test_gen_kwargs_integration.py  test_liteeval.py  test_liteval.py  test_lm_eval_mini.py  test_nano_eval.py  test_single_question_multi_task.py  test_tinyeval.py  test_yaml_cross_file.py  yaml_cross_file_report.json
