[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "liteval"
version = "0.1.0"
description = "Lightweight LLM evaluation via OpenAI-compatible APIs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiohttp>=3.8.0",
    "datasets>=2.16.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]
images = ["pillow>=9.0.0"]

[project.scripts]
liteval = "liteval:main"

[tool.setuptools]
py-modules = ["liteval"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["tasks/**/*.yaml", "tasks/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
