[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyeval"
version = "1.0.0"
description = "Tiny Eval - A minimal harness for evaluating LLMs via OpenAI-compatible APIs"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "datasets==3.6.0",
    "httpx==0.28.1",
    "pillow==12.1.0",
]

[project.scripts]
tinyeval = "tinyeval:main"

[project.optional-dependencies]
dev = ["pytest==9.0.2", "pytest-cov==7.0.0", "ruff==0.14.10", "pre-commit==4.5.1"]

[tool.setuptools]
py-modules = ["tinyeval", "core"]
packages = ["tasks"]

[tool.ruff.lint]
extend-select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["tinyeval", "core", "tasks"]
