[package]
name = "tinyeval"
version = "1.0.0"
edition = "2021"
description = "A minimal, lean harness for evaluating LLMs through OpenAI-compatible APIs"
license = "MIT"

[[bin]]
name = "tinyeval"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Hashing
sha2 = "0.10"

# Image processing
image = "0.25"
base64 = "0.22"

# Random
rand = "0.8"

# Regex for answer extraction
regex = "1"

# Lazy static for task registry
once_cell = "1"

[dev-dependencies]
# Testing
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
